feat: adding a contract